# road-segmentation

./: .gitignore  README.md  generate_submission.py  pyproject.toml  requirements.txt
dataset/dataset/train/gt/: satImage_001.npy  satImage_002.npy  satImage_003.npy  satImage_004.npy  satImage_005.npy  satImage_006.npy  satImage_007.npy  satImage_008.npy  satImage_009.npy  satImage_010.npy  satImage_011.npy  satImage_012.npy  satImage_013.npy  satImage_014.npy  satImage_015.npy  satImage_016.npy  satImage_017.npy  satImage_018.npy  satImage_019.npy  satImage_020.npy  satImage_021.npy  satImage_022.npy  satImage_023.npy  satImage_024.npy  satImage_025.npy  satImage_026.npy  satImage_027.npy  satImage_028.npy  satImage_029.npy  satImage_030.npy  satImage_031.npy  satImage_032.npy  satImage_033.npy  satImage_034.npy  satImage_035.npy  satImage_036.npy  satImage_037.npy  satImage_038.npy  satImage_039.npy  satImage_040.npy  (+50 more)
dataset/dataset/val/gt/: satImage_091.npy  satImage_092.npy  satImage_093.npy  satImage_094.npy  satImage_095.npy  satImage_096.npy  satImage_097.npy  satImage_098.npy  (+2 more)
src/Architectures/Models/: BaseModel.py  CBAMUnet.py
src/Inference/: run.py
src/PreProcess/: CropToROI.py  MoveFiles.py  PreProcess.py
src/Training/: IngestDataset.py  Losses.py  Metrics.py  StitchImage.py  TileImage.py  Train.py
src/utils/: ComputeMetrics.py  DescribeClass.py  DirBuilder.py  VisualizeGraph.py  VisualizeModel.py  VisualizeSegment.py  colors.py  filepaths.py  generate_secret_key.py  post_process.py  tiling_and_stitching.py
submissions/: submission.csv
(+203 files in other folders)
